...
  android:id="@+id/textInputLayout"
  style="?attr/textInputStyle"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/editText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:importantForAutofill="no" />

</com.google.android.material.textfield.TextInputLayout>

